--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     display: inline-block;
   }
   .div_right {
-    background-color: black;
+    background-color: #fff;
     text-align: center;
     width: 75%;
     height: 100%;
